--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@angular/core": "^17.0.4",
+    "@angular/router": "^17.0.4",
     "express": "^4.18.2",
     "mongoose": "^8.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/jest": "^29.5.8",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.3.2"
   }
 }
