--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "angular": "^1.8.3",
+    "angular-calendar": "^0.31.0",
+    "node": "^21.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
