--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "concurrently": "^6.0.2"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express-async-handler": "^1.2.0"
