--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.6.2",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
-    "express-async-handler": "^1.2.0"
+    "express-async-handler": "^1.2.0",
+    "react": "^18.2.0",
+    "react-scripts": "^5.0.1"
   }
 }
